set(COMMON_HEADERS ${COMMON_HEADERS} PARENT_SCOPE)
#set(LIBS ${LIBS} PARENT_SCOPE)
#set(PROJECT_NAME ${PROJECT_NAME} PARENT_SCOPE)
list(
    APPEND
    COMMON_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/common.h
)
#list(APPEND
#    LIST
#    ${PROJECT_NAME}_Common
#)
#add_library(
#    ${PROJECT_NAME}_Common
#INTERFACE
#)
#target_sources(${PROJECT_NAME}_Common INTERFACE ${COMMON_HEADERS})

set(COMMON_HEADERS ${COMMON_HEADERS} PARENT_SCOPE)
set(COMMON_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
#set(LIBS ${LIBS} PARENT_SCOPE)
