set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(TEST_NAME ${CMAKE_PROJECT_NAME}_Gui_Test)

set(TEST_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/treeview_test.cpp)

add_executable(${TEST_NAME} ${TEST_SOURCE_FILES})

add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

target_link_libraries(${TEST_NAME} PUBLIC Qt${QT_VERSION_MAJOR}::Test ${LIBS} ${LIBS_QT})
